# tessaract-core

./: README.md
.github/workflows/: delete_tesseract.yaml  deploy_tesseract.yaml  deploy_tesseract.yaml.bkup
dynamo_worker/: .pre-commit-config.yaml  Makefile  pyproject.toml
dynamo_worker/src/: tesseract_dynamo_updater.py
infrastructure/config/: config.yaml
infrastructure/config/reporting/: notification-sns.yaml
infrastructure/scripts/: connection_creator.py  init_worker.py  tesseract_connection_base.py
infrastructure/templates/: database.yaml  graphql-api-template.yaml  iam-policy-base.yaml  iam-role-base.yaml  lambda-base.yaml  lambda-scheduler-template.yaml  s3-base.yaml  sns-base.yaml  tesflow-base.yaml
infrastructure/vars/: deployment_vars.yaml  emrinit.sh  var_generator.sh
tesflow_artifacts/: helpers.py  tesseract_refresher_dag.py
tesflow_artifacts/libs/: emr_launch_library.py  emr_submit_and_monitor_step.py
tesseract_athena_get_resolver/: Makefile  pyproject.toml  requirements.txt
tesseract_athena_get_resolver/src/: resolver_config.py
tesseract_connector/: Makefile  pyproject.toml
tesseract_connector/src/: tesseract_connection_base.py  tesseract_connector.py  tesseract_refresher_dag.py
tesseract_data/: Makefile  pyproject.toml
tesseract_data/src/: tesseract_data.py
tesseract_dynamo_worker/: Makefile  pyproject.toml
tesseract_lambda/: Makefile  config.json
tesseract_lambda/src/: index.py
tesseract_resolver/: .flake8  Makefile  pyproject.toml
tesseract_resolver/src/: tesseract_athena_get_resolver.py
(+27 files in other folders)
