[tool.poetry]
name = "tesseract"
version = "0.1.0"
description = ""
authors = ["aprasad2 <aprasad2@godaddy.com>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.20.31"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"